--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tax_due"
-        android:id="@+id/tipLabelTextView"
+        android:id="@+id/taxDueLabelTextView"
         android:layout_row="2"
         android:layout_column="0"
         android:gravity="right"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/tipTextView"
+        android:id="@+id/taxDueTextView"
         android:layout_row="2"
         android:layout_column="1"
         android:background="@color/result_background"
